add bootstrap and confirm it running

--- a/FrontEnd/src/app/signUpCompenents/dr-sign-up/dr-sign-up.component.html
+++ b/FrontEnd/src/app/signUpCompenents/dr-sign-up/dr-sign-up.component.html
@@ -1,4 +1,6 @@
 <app-sign-up-bar></app-sign-up-bar>
-<p>
-  dr-sign-up works!
-</p>
+<form (ngSubmit)="submit(form)" #form="ngForm">
+  <input type="text" name="drName" placeholder="name">
+  <input type="password" name="drPassword" placeholder="password">
+  <input type="password" name="drConfirmPassword" placeholder="confirm password">
+</form>
