--- a/FrontEnd/src/app/signUpCompenents/dr-sign-up/dr-sign-up.component.html
+++ b/FrontEnd/src/app/signUpCompenents/dr-sign-up/dr-sign-up.component.html
@@ -1,6 +1,30 @@
-<app-sign-up-bar></app-sign-up-bar>
-<form (ngSubmit)="submit(form)" #form="ngForm">
-  <input type="text" name="drName" placeholder="name">
-  <input type="password" name="drPassword" placeholder="password">
-  <input type="password" name="drConfirmPassword" placeholder="confirm password">
-</form>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#drSignUpModal">
+  Dr Sign Up
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="drSignUpModal" tabindex="-1" role="dialog" aria-labelledby="drSignUpModalLabel"
+     aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="drSignUpModalLabel">Dr Sign up</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form (ngSubmit)="submit(form)" #form="ngForm">
+          <input type="text" name="drFirstName" placeholder="First Name" class="form-control">
+          <input type="text" name="drLastName" placeholder="Last Name" class="form-control">
+          <input type="email" name="drEmail" placeholder="Email" class="form-control">
+          <input type="password" name="drPassword" placeholder="Password" class="form-control">
+          <input type="password" name="drConfirmPassword" placeholder="confirm password" class="form-control">
+          <input type="text" name="jobId" placeholder="Job ID" class="form-control">
+          <button type="submit" class="btn btn-primary">submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
