--- a/FrontEnd/src/app/signUpCompenents/patient-sign-up/patient-sign-up.component.html
+++ b/FrontEnd/src/app/signUpCompenents/patient-sign-up/patient-sign-up.component.html
@@ -1,4 +1,29 @@
-<app-sign-up-bar></app-sign-up-bar>
-<p>
-  patient-sign-up works!
-</p>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#patientSignUpModal">
+  Patient Sign Up
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="patientSignUpModal" tabindex="-1" role="dialog" aria-labelledby="patientSignUpModalLabel"
+     aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="patientSignUpModalLabel">Patient Sign up</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form (ngSubmit)="submit(form)" #form="ngForm">
+          <input type="text" name="patientFirstName" placeholder="First Name" class="form-control">
+          <input type="text" name="patientLastName" placeholder="Last Name" class="form-control">
+          <input type="email" name="patientEmail" placeholder="Email" class="form-control">
+          <input type="password" name="patientPassword" placeholder="Password" class="form-control">
+          <input type="password" name="patientConfirmPassword" placeholder="confirm password" class="form-control">
+          <button type="submit" class="btn btn-primary">submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
