fix hashing password and rename models comumns

--- a/FrontEnd/src/app/signUpCompenents/patient-sign-up/patient-sign-up.component.html
+++ b/FrontEnd/src/app/signUpCompenents/patient-sign-up/patient-sign-up.component.html
@@ -19,7 +19,7 @@
           <input type="text" ngModel name="patientFirstName" placeholder="First Name" class="form-control">
           <input type="text" ngModel name="patientLastName" placeholder="Last Name" class="form-control">
           <input type="email" ngModel name="patientEmail" placeholder="Email" class="form-control">
-          <input type="password" ngModel name="patientPassword" placeholder="Password" class="form-control">
+          <input type="password" ngModel name="password" placeholder="Password" class="form-control">
           <input type="password" name="patientConfirmPassword" placeholder="confirm password" class="form-control">
           <div style="width: 100%">
             <button type="submit" class="btn btn-primary" id="patientSignUpSubmit">submit</button>
