--- a/FrontEnd/src/app/signUpCompenents/dr-sign-up/dr-sign-up.component.html
+++ b/FrontEnd/src/app/signUpCompenents/dr-sign-up/dr-sign-up.component.html
@@ -19,7 +19,7 @@
           <input type="text" ngModel name="drFirstName" placeholder="First Name" class="form-control">
           <input type="text" ngModel name="drLastName" placeholder="Last Name" class="form-control">
           <input type="email" ngModel name="drEmail" placeholder="Email" class="form-control">
-          <input type="password" ngModel name="drPassword" placeholder="Password" class="form-control">
+          <input type="password" ngModel name="password" placeholder="Password" class="form-control">
           <input type="password" name="drConfirmPassword" placeholder="confirm password" class="form-control">
           <input type="text" ngModel name="jobId" placeholder="Job ID" class="form-control">
           <div id="drSignUpSubmit">
