--- a/FrontEnd/src/app/add-quiz/add-quiz.component.html
+++ b/FrontEnd/src/app/add-quiz/add-quiz.component.html
@@ -1,3 +1,9 @@
-<p>
-  add-quiz works!
-</p>
+<form (ngSubmit)="submit(form)" #form="ngForm">
+  <input type="text" ngModel name="title" placeholder="quiz title">
+  <div *ngFor="let item of data; let i = index">
+    <input type="text" ngModel="i">
+  </div>
+  <button type="button" (click)="addQuestion()" class="btn btn-success">add question</button>
+
+  <button type="submit" class="btn btn-primary">submit</button>
+</form>
