finish sign up functionality

--- a/FrontEnd/src/app/sign-in/sign-in.component.html
+++ b/FrontEnd/src/app/sign-in/sign-in.component.html
@@ -18,7 +18,9 @@
         <form (ngSubmit)="submit(form)" #form="ngForm">
           <input type="email"  name="Email" placeholder="Email" class="form-control">
           <input type="password" name="Password" placeholder="Password" class="form-control">
-          <button type="submit" class="btn btn-primary">sign in</button>
+          <div id="sigIn">
+            <button type="submit" class="btn btn-primary">sign in</button>
+          </div>
         </form>
       </div>
     </div>
