--- a/FrontEnd/src/app/signUpCompenents/parent-sign-up/parent-sign-up.component.html
+++ b/FrontEnd/src/app/signUpCompenents/parent-sign-up/parent-sign-up.component.html
@@ -1,6 +1,6 @@
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#patientSignUpModal">
-  Patient Sign Up
+  Parent Sign Up
 </button>
 
 <!-- Modal -->
@@ -9,16 +9,16 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="patientSignUpModalLabel">Patient Sign up</h5>
+        <h5 class="modal-title" id="patientSignUpModalLabel">Parent Sign up</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
         <form (ngSubmit)="submit(form)" #form="ngForm">
-          <input type="text" ngModel name="patientFirstName" placeholder="First Name" class="form-control">
-          <input type="text" ngModel name="patientLastName" placeholder="Last Name" class="form-control">
-          <input type="email" ngModel name="patientEmail" placeholder="Email" class="form-control">
+          <input type="text" ngModel name="parentFirstName" placeholder="First Name" class="form-control">
+          <input type="text" ngModel name="parentLastName" placeholder="Last Name" class="form-control">
+          <input type="email" ngModel name="parentEmail" placeholder="Email" class="form-control">
           <input type="password" ngModel name="password" placeholder="Password" class="form-control">
           <input type="password" name="patientConfirmPassword" placeholder="confirm password" class="form-control">
           <div style="width: 100%">
