--- a/FrontEnd/src/app/welcome/welcome.component.html
+++ b/FrontEnd/src/app/welcome/welcome.component.html
@@ -1,6 +1,6 @@
 <app-welcome-bar></app-welcome-bar>
 <div class="jumbotron">
-  <h1 class="display-4">Welcome to Patient App</h1>
+  <h1 class="display-4">Welcome to Quizller App</h1>
   <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured
     content or information.</p>
   <hr class="my-4">
