finish sign in with testing

--- a/FrontEnd/src/app/sign-in/sign-in.component.css
+++ b/FrontEnd/src/app/sign-in/sign-in.component.css
@@ -2,6 +2,10 @@ input{
   margin-bottom: 10px;
 }
 
-#sigIn{
-  margin-left: 84%;
+#parentSignInButton{
+  margin-left: 15px;
+}
+
+#drSignInButton{
+  margin-left: 42%;
 }
