--- a/FrontEnd/src/app/signUpCompenents/sign-up-complete/sign-up-complete.component.html
+++ b/FrontEnd/src/app/signUpCompenents/sign-up-complete/sign-up-complete.component.html
@@ -1,3 +1,6 @@
-<p>
-  sifn-up-complete works!
-</p>
+<div class="jumbotron">
+  <h1 class="display-4">Sign Up complete</h1>
+  <p class="lead">you have been signed up successfully</p>
+  <hr class="my-4">
+  <p>click <a routerLink="/">here</a> to return to welcome page</p>
+</div>
