create dr navbar and results page

--- a/FrontEnd/src/app/dr/add-quiz/add-quiz.component.html
+++ b/FrontEnd/src/app/dr/add-quiz/add-quiz.component.html
@@ -1,3 +1,4 @@
+<app-dr-navbar></app-dr-navbar>
 <form (ngSubmit)="submit(form)" #form="ngForm">
   <input type="text" ngModel name="title" placeholder="quiz title">
   <div *ngFor="let item of data; let i = index">
