--- a/FrontEnd/src/app/dr/dr-navbar/dr-navbar.component.html
+++ b/FrontEnd/src/app/dr/dr-navbar/dr-navbar.component.html
@@ -2,8 +2,11 @@
   <a class="navbar-brand">Quizller</a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <!--    <ul class="navbar-nav mr-auto">-->
-    <!--    </ul>-->
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item"><a class="nav-link" routerLink="/dr/result">Results Page</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/dr/new">Create quiz</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/dr/new">Fill quiz</a></li>
+    </ul>
     <ul class="navbar-nav ml-auto">
       <li><h5 id="name">welcome {{drName}}</h5></li>
       <div class="vertical-line"></div>
