--- a/FrontEnd/src/app/dr/results/results.component.html
+++ b/FrontEnd/src/app/dr/results/results.component.html
@@ -1,4 +1,19 @@
 <app-dr-navbar></app-dr-navbar>
-<p>
-  results works!
-</p>
+<div class="container">
+  <table class="table">
+    <thead>
+    <th>#</th>
+    <th>first name</th>
+    <th>last name</th>
+    <th>result</th>
+    </thead>
+    <tbody>
+    <tr *ngFor="let item of data;let i = index" (click)="seeAnswers(i)">
+      <td>{{i + 1}}</td>
+      <td>{{item.patient_first_name}}</td>
+      <td>{{item.patient_last_name}}</td>
+      <td>{{item.result}}</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
