--- a/FrontEnd/src/app/dr/answers/answers.component.html
+++ b/FrontEnd/src/app/dr/answers/answers.component.html
@@ -2,8 +2,8 @@
 <div class="container">
   <table class="table">
     <thead>
-    <th>question</th>
-    <th>answer</th>
+    <th>question id</th>
+    <th>chosen choice id</th>
     </thead>
     <tbody>
     <tr *ngFor="let item of data;let i = index;">
