--- a/FrontEnd/src/app/dr/dr-navbar/dr-navbar.component.html
+++ b/FrontEnd/src/app/dr/dr-navbar/dr-navbar.component.html
@@ -5,7 +5,7 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item"><a class="nav-link" routerLink="/dr/result">Results Page</a></li>
       <li class="nav-item"><a class="nav-link" routerLink="/dr/new">Create quiz</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="/dr/new">Fill quiz</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/dr/quiz">Fill quiz</a></li>
     </ul>
     <ul class="navbar-nav ml-auto">
       <li><h5 id="name">welcome {{drName}}</h5></li>
