--- a/FrontEnd/src/app/dr/results/results.component.html
+++ b/FrontEnd/src/app/dr/results/results.component.html
@@ -8,7 +8,7 @@
     <th>result</th>
     </thead>
     <tbody>
-    <tr *ngFor="let item of data;let i = index" (click)="seeAnswers(i)">
+    <tr *ngFor="let item of data;let i = index" (click)="seeAnswers(item.id)">
       <td>{{i + 1}}</td>
       <td>{{item.patient_first_name}}</td>
       <td>{{item.patient_last_name}}</td>
