--- a/FrontEnd/src/app/dr/answers/answers.component.html
+++ b/FrontEnd/src/app/dr/answers/answers.component.html
@@ -8,7 +8,7 @@
     <tbody>
     <tr *ngFor="let item of data;let i = index;">
       <td>{{item.question}}</td>
-      <td>{{item.choice}}</td>
+      <td>{{item.result}}</td>
     </tr>
     </tbody>
   </table>
