--- a/FrontEnd/src/app/all-quiz/all-quiz.component.css
+++ b/FrontEnd/src/app/all-quiz/all-quiz.component.css
@@ -1,3 +1,16 @@
 tr:hover{
   background: grey;
 }
+
+#firstName{
+  margin-top: 10px;
+}
+
+input{
+  margin-bottom: 5px;
+  width: 30%;
+}
+
+label{
+  width: 80px;
+}
