--- a/FrontEnd/src/app/all-quiz/all-quiz.component.html
+++ b/FrontEnd/src/app/all-quiz/all-quiz.component.html
@@ -1,22 +1,44 @@
 <div class="container">
-  <table class="table">
-    <thead>
-    <th>
-      #
-    </th>
-    <th>
-      quiz title
-    </th>
-    <th>
-      dr id
-    </th>
-    </thead>
-    <tbody>
-    <tr *ngFor="let item of data; let i = index" (click)="takeQuiz(item.id)">
-      <td>{{i + 1}}</td>
-      <td>{{item.title}}</td>
-      <td>{{item.dr}}</td>
-    </tr>
-    </tbody>
-  </table>
+  <form (ngSubmit)="submitTheForm(form)" #form="ngForm" *ngIf="formMode; else table">
+    <input type="text" name="patient_first_name" ngModel placeholder="Patient First Name" class="form-control"
+           id="firstName">
+    <input type="text" name="patient_last_name" ngModel placeholder="Patient Last Name" class="form-control">
+    <input type="text" name="patient_birth_date" ngModel placeholder="Patient birth date" class="form-control">
+    <div class="radio">
+      <label>
+        <input ngModel value="male" type="radio" name="opt">
+        Male
+      </label>
+    </div>
+    <div class="radio">
+      <label>
+        <input ngModel value="female" type="radio" name="opt">
+        Female
+      </label>
+    </div>
+    <button type="submit" class="btn btn-primary">submit</button>
+  </form>
+
+  <ng-template #table>
+    <table class="table">
+      <thead>
+      <th>
+        #
+      </th>
+      <th>
+        quiz title
+      </th>
+      <th>
+        dr id
+      </th>
+      </thead>
+      <tbody>
+      <tr *ngFor="let item of data; let i = index" (click)="takeQuiz(item.id)">
+        <td>{{i + 1}}</td>
+        <td>{{item.title}}</td>
+        <td>{{item.dr}}</td>
+      </tr>
+      </tbody>
+    </table>
+  </ng-template>
 </div>
