--- a/FrontEnd/src/app/parent/parent-navbar/parent-navbar.component.html
+++ b/FrontEnd/src/app/parent/parent-navbar/parent-navbar.component.html
@@ -1,3 +1,12 @@
-<p>
-  parent-navbar works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand">Quizller</a>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+      <li><h5 id="name">welcome {{parentName}}</h5></li>
+      <div class="vertical-line"></div>
+      <button class="btn btn-outline-danger" (click)="signOut()">Sign Out</button>
+    </ul>
+
+  </div>
+</nav>
