--- a/FrontEnd/src/app/dr/results/results.component.html
+++ b/FrontEnd/src/app/dr/results/results.component.html
@@ -6,6 +6,7 @@
     <th>first name</th>
     <th>last name</th>
     <th>result</th>
+    <th>quiz</th>
     </thead>
     <tbody>
     <tr *ngFor="let item of data;let i = index" (click)="seeAnswers(item.id)">
@@ -13,6 +14,7 @@
       <td>{{item.patient_first_name}}</td>
       <td>{{item.patient_last_name}}</td>
       <td>{{item.result}}</td>
+      <td>{{item.quiz}}</td>
     </tr>
     </tbody>
   </table>
