--- a/FrontEnd/src/app/single-quiz/single-quiz.component.html
+++ b/FrontEnd/src/app/single-quiz/single-quiz.component.html
@@ -1,15 +1,15 @@
 <div class="container">
   <p>{{question.question_body}}</p>
 
-  <div class="radio" *ngFor="let choice of choices; let i = index">
-    <label (click)="commitQuestion(i)">
+  <div class="radio" *ngFor="let choice of choices;">
+    <label (click)="commitQuestion(choice)">
       <input type="radio" name="opt">
       {{choice.text}}
     </label>
   </div>
 
 
-  <button type="button" class="btn btn-primary" (click)="back()" [disabled]="questionIdx==0">Back</button>
+  <button type="button" class="btn btn-primary" (click)="back()" [disabled]="questionIdx===0">Back</button>
   <button type="button" class="btn btn-primary nextButton" *ngIf="!submitFlag; else submitArea" (click)="next()">Next
   </button>
   <ng-template #submitArea>
