add question # and implement choice description in backend

--- a/FrontEnd/src/app/single-quiz/single-quiz.component.html
+++ b/FrontEnd/src/app/single-quiz/single-quiz.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <p>Question:{{showQuestionService.getIdx()}}</p>
   <p>{{question.question_body}}</p>
 
   <div class="radio" *ngFor="let choice of choices;">
