--- a/FrontEnd/src/app/single-quiz/single-quiz.component.html
+++ b/FrontEnd/src/app/single-quiz/single-quiz.component.html
@@ -1,11 +1,13 @@
-<div class="container">
+<div class="container arabic">
   <p>Question:{{showQuestionService.getIdx()}}</p>
-  <p>{{question.question_body}}</p>
+  <p class="arabic">{{question.question_body}}</p>
 
-  <div class="radio" *ngFor="let choice of choices;">
-    <label (click)="commitQuestion(choice)">
+  <div class="radio arabic" *ngFor="let choice of choices;">
+    <label on-mouseenter="showDescription(choice.id)" on-mouseleave="hideDescription(choice.id)"
+           (click)=" commitQuestion(choice)">
       <input type="radio" name="opt">
-      {{choice.text}}
+      {{choice.title}}
+      <span *ngIf="choiceMap.get(choice.id)" class="text-primary">{{choice.description}}</span>
     </label>
   </div>
 
