fix add question

--- a/FrontEnd/src/app/dr/add-quiz/add-quiz.component.html
+++ b/FrontEnd/src/app/dr/add-quiz/add-quiz.component.html
@@ -10,32 +10,44 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-10">
+          <div class="col-2">
             <input type="text" name="choice1-{{i}}" ngModel class="form-control" placeholder="Choice A Body">
+          </div>
+          <div class="col-8">
+            <input type="text" name="desc1-{{i}}" ngModel class="form-control" placeholder="Choice A Description">
           </div>
           <div class="col-2">
             <input type="text" name="score1-{{i}}" ngModel class="form-control" placeholder="Choice A Score">
           </div>
         </div>
         <div class="row">
-          <div class="col-10">
+          <div class="col-2">
             <input type="text" name="choice2-{{i}}" ngModel class="form-control" placeholder="Choice B Body">
+          </div>
+          <div class="col-8">
+            <input type="text" name="desc2-{{i}}" ngModel class="form-control" placeholder="Choice B Description">
           </div>
           <div class="col-2">
             <input type="text" name="score2-{{i}}" ngModel class="form-control" placeholder="Choice B Score">
           </div>
         </div>
         <div class="row">
-          <div class="col-10">
+          <div class="col-2">
             <input type="text" name="choice3-{{i}}" ngModel class="form-control" placeholder="Choice C Body">
+          </div>
+          <div class="col-8">
+            <input type="text" name="desc3-{{i}}" ngModel class="form-control" placeholder="Choice C Description">
           </div>
           <div class="col-2">
             <input type="text" name="score3-{{i}}" ngModel class="form-control" placeholder="Choice C Score">
           </div>
         </div>
         <div class="row">
-          <div class="col-10">
+          <div class="col-2">
             <input type="text" name="choice4-{{i}}" ngModel class="form-control" placeholder="Choice D Body">
+          </div>
+          <div class="col-8">
+            <input type="text" name="desc4-{{i}}" ngModel class="form-control" placeholder="Choice D Description">
           </div>
           <div class="col-2">
             <input type="text" name="score4-{{i}}" ngModel class="form-control" placeholder="Choice D Score">
