--- a/FrontEnd/src/app/dr/dr-navbar/dr-navbar.component.html
+++ b/FrontEnd/src/app/dr/dr-navbar/dr-navbar.component.html
@@ -6,6 +6,7 @@
       <li class="nav-item"><a class="nav-link" routerLink="/dr/result">Results Page</a></li>
       <li class="nav-item"><a class="nav-link" routerLink="/dr/new">Create quiz</a></li>
       <li class="nav-item"><a class="nav-link" routerLink="/dr/quiz">Fill quiz</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/dr/csv">Csv</a></li>
     </ul>
     <ul class="navbar-nav ml-auto">
       <li><h5 id="name">welcome {{drName}}</h5></li>
