--- a/FrontEnd/src/app/parent/parent-navbar/parent-navbar.component.html
+++ b/FrontEnd/src/app/parent/parent-navbar/parent-navbar.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand">Quizller</a>
-
+  <a class="navbar-brand">
+    <img src="/assets/logo.jpg" width="30" height="30"  class="d-inline-block align-top" alt=""/>
+    STAND UP FOR AUTISM
+  </a>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li><h5 id="name">welcome {{parentName}}</h5></li>
