--- a/FrontEnd/src/app/dr/dr-navbar/dr-navbar.component.html
+++ b/FrontEnd/src/app/dr/dr-navbar/dr-navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand">
-    <img src="/assets/logo.jpg" width="30" height="30"  class="d-inline-block align-top" alt=""/>
+  <a class="navbar-brand" routerLink="/dr/new">
+    <img src="/assets/logo.jpg" width="30" height="30" class="d-inline-block align-top" alt=""/>
     STAND UP FOR AUTISM
   </a>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -9,6 +9,7 @@
       <li class="nav-item"><a class="nav-link" routerLink="/dr/new">Create quiz</a></li>
       <li class="nav-item"><a class="nav-link" routerLink="/dr/quiz">Fill quiz</a></li>
       <li class="nav-item"><a class="nav-link" routerLink="/dr/csv">AI</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/dr/about">About</a></li>
     </ul>
     <ul class="navbar-nav ml-auto">
       <li><h5 id="name">welcome {{drName}}</h5></li>
