--- a/FrontEnd/src/app/parent/parent-navbar/parent-navbar.component.html
+++ b/FrontEnd/src/app/parent/parent-navbar/parent-navbar.component.html
@@ -4,6 +4,9 @@
     STAND UP FOR AUTISM
   </a>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item"><a class="nav-link" routerLink="/parent/about">About</a></li>
+    </ul>
     <ul class="navbar-nav ml-auto">
       <li><h5 id="name">welcome {{parentName}}</h5></li>
       <div class="vertical-line"></div>
