--- a/FrontEnd/src/app/welcome-bar/welcome-bar.component.html
+++ b/FrontEnd/src/app/welcome-bar/welcome-bar.component.html
@@ -1,12 +1,13 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand">
-    <img src="/assets/logo.jpg" width="30" height="30"  class="d-inline-block align-top" alt=""/>
+  <a class="navbar-brand" routerLink="/welcome">
+    <img src="/assets/logo.jpg" width="30" height="30" class="d-inline-block align-top" alt=""/>
     STAND UP FOR AUTISM
   </a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-<!--    <ul class="navbar-nav mr-auto">-->
-<!--    </ul>-->
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item"><a class="nav-link" routerLink="/about">About</a></li>
+    </ul>
     <ul class="navbar-nav ml-auto">
       <app-dr-sign-up id="drSignUp"></app-dr-sign-up>
       <app-parent-sign-up></app-parent-sign-up>
