fix parent brand not clickable

--- a/FrontEnd/src/app/parent/parent-navbar/parent-navbar.component.html
+++ b/FrontEnd/src/app/parent/parent-navbar/parent-navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand">
+  <a class="navbar-brand" routerLink="/parent/quiz">
     <img src="/assets/logo.jpg" width="30" height="30"  class="d-inline-block align-top" alt=""/>
     STAND UP FOR AUTISM
   </a>
