finish welcome page

--- a/FrontEnd/src/app/welcome/welcome.component.html
+++ b/FrontEnd/src/app/welcome/welcome.component.html
@@ -1,11 +1,33 @@
 <app-welcome-bar></app-welcome-bar>
 <div class="jumbotron">
-  <h1 class="display-4">Welcome to Quizller App</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured
-    content or information.</p>
-  <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+  <h1 class="display-4">Hope and a Clear Path Forward</h1>
+  <p class="lead">Machine Learning in medical assessments for early detection can stand up for autism</p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <a class="btn btn-primary btn-lg" href="#" role="button">lets Start</a>
   </p>
+  <div id="down" class="row">
+    <div class="col-4" id="first-block">
+      <div class="container about-area">
+        <h4>Primary care</h4>
+        <p class="lead">You can do this test at any time and anywhere you want under precision and high speed and
+          supervised by a group of specialist doctors.</p>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="container about-area">
+        <h4>Emergency Cases</h4>
+        <p class="lead">In case of any defect or inability to understand or answer a specific question you can
+          communicate directly with the specialist</p>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="container about-area">
+        <h4>Online Appointment</h4>
+        <p class="lead">After the initial examination you can book a real appointment with the doctor for advanced
+          tests
+          and other prescribed treatments
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
