finish the ui  updates

--- a/FrontEnd/src/app/about/about.component.html
+++ b/FrontEnd/src/app/about/about.component.html
@@ -23,30 +23,30 @@
       <p class="lead">for each question there is some choices each of them has an score ,at the end all the scores will
         be
         summed and based on the total we will see if the patient has an ASD or not.</p>
-      <div class="row">
-        <div class="col-4" id="first-block">
-          <div class="container about-area">
-            <h4>Primary care</h4>
-            <p class="lead">You can do this test at any time and anywhere you want under precision and high speed and
-              supervised by a group of specialist doctors.</p>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="container about-area">
-            <h4>Emergency Cases</h4>
-            <p class="lead">In case of any defect or inability to understand or answer a specific question you can
-              communicate directly with the specialist</p>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="container about-area">
-            <h4>Online Appointment</h4>
-            <p class="lead">After the initial examination you can book a real appointment with the doctor for advanced
-              tests
-              and other prescribed treatments
-            </p>
-          </div>
-        </div>
-      </div>
+<!--      <div class="row">-->
+<!--        <div class="col-4" id="first-block">-->
+<!--          <div class="container about-area">-->
+<!--            <h4>Primary care</h4>-->
+<!--            <p class="lead">You can do this test at any time and anywhere you want under precision and high speed and-->
+<!--              supervised by a group of specialist doctors.</p>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <div class="col-4">-->
+<!--          <div class="container about-area">-->
+<!--            <h4>Emergency Cases</h4>-->
+<!--            <p class="lead">In case of any defect or inability to understand or answer a specific question you can-->
+<!--              communicate directly with the specialist</p>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <div class="col-4">-->
+<!--          <div class="container about-area">-->
+<!--            <h4>Online Appointment</h4>-->
+<!--            <p class="lead">After the initial examination you can book a real appointment with the doctor for advanced-->
+<!--              tests-->
+<!--              and other prescribed treatments-->
+<!--            </p>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
     </div>
   </div>
