--- a/FrontEnd/src/app/welcome/welcome.component.html
+++ b/FrontEnd/src/app/welcome/welcome.component.html
@@ -1,9 +1,9 @@
 <app-welcome-bar></app-welcome-bar>
 <div class="jumbotron">
-  <h1 class="display-4">Hope and a Clear Path Forward</h1>
+  <h1 class="display-4 title-down">Hope and a Clear Path Forward</h1>
   <p class="lead">Machine Learning in medical assessments for early detection can stand up for autism</p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">lets Start</a>
+<!--    <a class="btn btn-primary btn-lg" href="#" role="button">lets Start</a>-->
   </p>
   <div id="down" class="row">
     <div class="col-4" id="first-block">
